[gd_scene load_steps=28 format=2]

[ext_resource path="res://Characters/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Characters/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Characters/PlayerFSM.gd" type="Script" id=3]
[ext_resource path="res://Art/DungeonAssetPack/Characters/Knight_idle.png" type="Texture" id=4]
[ext_resource path="res://Art/DungeonAssetPack/Characters/Knight_walk.png" type="Texture" id=5]
[ext_resource path="res://Weapons/Sword.tscn" type="PackedScene" id=6]
[ext_resource path="res://Art/effects (new)/enemy_afterdead_explosion_anim_spritesheet.png" type="Texture" id=9]
[ext_resource path="res://Music/Sounds/playerhurt.wav" type="AudioStream" id=12]
[ext_resource path="res://UI/Fonts/PixelFont.tres" type="DynamicFont" id=13]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 9 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 9 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 9 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "move",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=14]
radius = 3.66013

[sub_resource type="Animation" id=15]
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "idle", "dead" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_hurt_sound"
}, {
"args": [  ],
"method": "switch_camera"
}, {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimatedSprite:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 0.447059, 0.447059, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
length = 0.16
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.16 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 0.447059, 0.447059, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_hurt_sound"
} ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "disable_player_hurtbox"
} ]
}

[sub_resource type="Animation" id=17]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=18]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "move" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="Player" instance=ExtResource( 1 )]
collision_layer = 18
collision_mask = 5
script = ExtResource( 2 )

[node name="FiniteStateMachine" parent="." index="0"]
script = ExtResource( 3 )

[node name="AnimatedSprite" parent="." index="1"]
frames = SubResource( 13 )
animation = "dead"
frame = 3

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2( 0.347244, 2.23228 )
shape = SubResource( 14 )

[node name="AnimationPlayer" parent="." index="3"]
anims/dead = SubResource( 15 )
anims/hurt = SubResource( 16 )
anims/idle = SubResource( 17 )
anims/move = SubResource( 18 )

[node name="Weapons" type="Node2D" parent="." index="4"]

[node name="Sword" parent="Weapons" index="0" instance=ExtResource( 6 )]

[node name="Camera2D" type="Camera2D" parent="." index="5"]
current = true
zoom = Vector2( 1.1, 1.1 )

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D" index="0"]
pause_mode = 2

[node name="PauseMenu" type="Node2D" parent="Camera2D/CanvasLayer" index="0"]
visible = false

[node name="ColorRect" type="ColorRect" parent="Camera2D/CanvasLayer/PauseMenu" index="0"]
margin_left = 0.347244
margin_right = 500.347
margin_bottom = 500.0
color = Color( 0.643137, 0.490196, 0.447059, 0.333333 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="Camera2D/CanvasLayer/PauseMenu" index="1"]
margin_left = 100.546
margin_top = 18.4917
margin_right = 214.546
margin_bottom = 43.4917
custom_fonts/font = ExtResource( 13 )
text = "RESUME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewDungeon" type="Button" parent="Camera2D/CanvasLayer/PauseMenu" index="2"]
margin_left = 100.546
margin_top = 50.9255
margin_right = 214.546
margin_bottom = 75.9255
custom_fonts/font = ExtResource( 13 )
text = "NEW DUNGEON"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="Camera2D/CanvasLayer/PauseMenu" index="3"]
margin_left = 100.546
margin_top = 84.1193
margin_right = 214.546
margin_bottom = 109.119
custom_fonts/font = ExtResource( 13 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerHurtSound" type="AudioStreamPlayer" parent="." index="6"]
stream = ExtResource( 12 )
volume_db = -20.0

[node name="HurtboxTimer" type="Timer" parent="." index="7"]
wait_time = 0.5
one_shot = true

[node name="CursorTimer" type="Timer" parent="." index="8"]
wait_time = 0.02
one_shot = true

[connection signal="pressed" from="Camera2D/CanvasLayer/PauseMenu/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Camera2D/CanvasLayer/PauseMenu/NewDungeon" to="." method="_on_NewDungeon_pressed"]
[connection signal="pressed" from="Camera2D/CanvasLayer/PauseMenu/Exit" to="." method="_on_Exit_pressed"]
